--- a/index.html
+++ b/index.html
@@ -61,10 +61,14 @@
                         <p id="user-detail-name">ABHAY PATHAK</p>
                         <p id="user-detail-intro"></p>
                         <ul id="socials">
-                            <li><a href="mailto:abhipatha3537@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color: #ff7300;" title="Mail"></i></a></li>
-                            <li><a href="https://www.linkedin.com/in/abhay-pathak-824070257/" target="_blank"><i class="fa-brands fa-linkedin" style="color: #ff7300;" title="Linkedin"></i></a></li>
-                            <li><a href="https://github.com/abhipathak1" target="_blank"><i class="fa-brands fa-github" style="color: #ff7300;" title="GitHub"></i></a></li>
-                        </ul>                        
+                            <li><a href="mailto:abhipatha3537@gmail.com" target="_blank"><i class="fa-solid fa-envelope"
+                                        style="color: #ff7300;" title="Mail"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/abhay-pathak-824070257/" target="_blank"><i
+                                        class="fa-brands fa-linkedin" style="color: #ff7300;" title="Linkedin"></i></a>
+                            </li>
+                            <li><a href="https://github.com/abhipathak1" target="_blank"><i class="fa-brands fa-github"
+                                        style="color: #ff7300;" title="GitHub"></i></a></li>
+                        </ul>
                     </div>
                     <div id="mypic">
                         <img src="images/pp.png" alt="" class="home-img">
@@ -369,6 +373,39 @@
             </div>
 
             <div class="project-card">
+                <figure class="swing"><img class="proimg" src="images/StockVerse.jpg" alt=""></figure>
+                <h1 class="project-title">StockVerse</h1>
+                <h2> A console-based stock management
+                    system, providing users with a personalized stock market hub
+                    for managing portfolios and purchasing stocks.</h2>
+                <div class="tech">
+                    <div>
+                        <h1>TECH STACK</h1>
+                        <div>
+                            <img src="Skills_Logo/java_logo.png" alt="" title="java">
+                            <img src="Skills_Logo/hibernation.png" alt="" title="Hibernate">
+                            <img src="https://www.vectorlogo.zone/logos/mysql/mysql-official.svg" alt="" title="MySql">
+                        </div>
+                    </div>
+
+                    <div class="deployed-links">
+                        <h1>DEPLOYED</h1>
+                        <a href="https://github.com/abhipathak1/StockVerse" class="project-github-link"
+                            title="Github" target="_blank"><img src="Skills_Logo/Git_logo.png" alt=""></a>
+                        <a href="https://drive.google.com/file/d/1Y_BO4BySBuCpwJQKFzQLVIhW48DQisfW/view"
+                            class="project-deployed-link" title="Presentation" target="_blank"><img
+                                src="Skills_Logo/pr.png" alt=""></a>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+        <section class="Project">
+
+
+            <div class="project-card">
                 <figure class="swing"><img class="proimg" src="images/WondrWord.jpg" alt=""></figure>
                 <h1 class="project-title">WondrWord</h1>
                 <h2>WondrWord: Java Spring Boot web app for amusement park ticketing, planning, and exploration with
@@ -394,6 +431,7 @@
                 </div>
 
             </div>
+
         </section>
     </div>
 
@@ -441,12 +479,15 @@
                         8810594001</a></li>
             </ul>
             <ul id="foot-socials">
-                <li><a href="https://api.whatsapp.com/send?phone=918810594001" target="_blank"><i class="fa-brands fa-whatsapp" style="color: #ff7300;"></i></a></li>
+                <li><a href="https://api.whatsapp.com/send?phone=918810594001" target="_blank"><i
+                            class="fa-brands fa-whatsapp" style="color: #ff7300;"></i></a></li>
                 <li><a href="#" target="_blank"><i class="fa-brands fa-instagram" style="color: #ff7300;"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/abhay-pathak-824070257/" target="_blank"><i class="fa-brands fa-linkedin" style="color: #ff7300;"></i></a></li>
-                <li><a href="https://github.com/abhipathak1" target="_blank"><i class="fa-brands fa-github" style="color: #ff7300;"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/abhay-pathak-824070257/" target="_blank"><i
+                            class="fa-brands fa-linkedin" style="color: #ff7300;"></i></a></li>
+                <li><a href="https://github.com/abhipathak1" target="_blank"><i class="fa-brands fa-github"
+                            style="color: #ff7300;"></i></a></li>
             </ul>
-            
+
             <p style="margin-left: 50px;">Desingned by <span style="color: #ff7300;">Abhay Pathak</span></p>
         </div>
     </section>
