--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                         <img src="Skills_Logo/java_logo.png" alt="" title="java">
                         <img src="https://ak016.github.io/images/maven-logo.png" alt="" title="Maven">
                         <img src="https://www.vectorlogo.zone/logos/mysql/mysql-official.svg" alt="" title="MySql">
-                        &nbsp;&nbsp;&nbsp;
+                        &nbsp;
                         <img src="Skills_Logo/html_logo.png" alt="" title="HTML">
                         <img src="Skills_Logo/css_logo.webp" alt="" title="CSS">
                         <img src="Skills_Logo/js_logo2.jpg" alt="" title="JavaScript">
@@ -306,7 +306,7 @@
                         <h1>DEPLOYED</h1>
                         <a href="https://github.com/abhipathak1/TravTok_Java_2.0" class="project-github-link"
                             title="Github" target="_blank"><img src="Skills_Logo/Git_logo.png" alt=""></a>
-                        <a href="https://travtok.netlify.app/" class="project-deployed-link" title="Netlify"
+                        <a href="https://travtok-java.netlify.app/" class="project-deployed-link" title="Netlify"
                             target="_blank"><img src="Skills_Logo/Netlify.png" alt=""></a>
                     </div>
                 </div>
