--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <title>Abhay Pathak | Portfolio</title>
     <link rel="shortcut icon"
-        href="https://cdn.discordapp.com/attachments/758572508911501315/1129308033604923442/ap-letter-logo-design_579179-1040-removebg-preview-removebg-preview.png"
+        href="images/title_logo.png"
         type="jpeg/png">
 
     <!-- first-Font -->
