--- a/index.html
+++ b/index.html
@@ -98,9 +98,7 @@
                     <div class="resume-buttons">
                         <a class="resume-button" id="resume-button-2"
                             href="https://drive.google.com/uc?export=download&id=1n-8G0z6pnqzmMC5w1q3lbGpCl6mMx_qo"
-                            title="Resume">Know
-                            More
-                            About Me &nbsp <i class="fa-solid fa-arrow-right"></i>
+                            title="Resume">Download Resume  &nbsp <i class="fa-solid fa-arrow-right"></i>
                         </a>
                     </div>
                 </div>
@@ -294,7 +292,7 @@
                     <div>
                         <h1>Tech Stack</h1>
                         <img src="Skills_Logo/java_logo.png" alt="" title="java">
-                        <img src="https://ak016.github.io/images/maven-logo.png" alt="" title="Maven">
+                        <!-- <img src="https://ak016.github.io/images/maven-logo.png" alt="" title="Maven"> -->
                         <img src="https://www.vectorlogo.zone/logos/mysql/mysql-official.svg" alt="" title="MySql">
                         &nbsp;
                         <img src="Skills_Logo/html_logo.png" alt="" title="HTML">
@@ -306,8 +304,8 @@
                         <h1>DEPLOYED</h1>
                         <a href="https://github.com/abhipathak1/TravTok_Java_2.0" class="project-github-link"
                             title="Github" target="_blank"><img src="Skills_Logo/Git_logo.png" alt=""></a>
-                        <a href="https://travtok-java.netlify.app/" class="project-deployed-link" title="Netlify"
-                            target="_blank"><img src="Skills_Logo/Netlify.png" alt=""></a>
+                        <!-- <a href="https://travtok-java.netlify.app/" class="project-deployed-link" title="Netlify"
+                            target="_blank"><img src="Skills_Logo/Netlify.png" alt=""></a> -->
                     </div>
                 </div>
 
@@ -402,7 +400,7 @@
 
         </section>
 
-        <section class="Project">
+        <!-- <section class="Project">
 
 
             <div class="project-card">
@@ -432,7 +430,7 @@
 
             </div>
 
-        </section>
+        </section> -->
     </div>
 
 
