Change the profile pic

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         </ul>
                     </div>
                     <div id="mypic">
-                        <img src="images/pp.png" alt="" class="home-img">
+                        <img src="images/ProfilePic.jpg" alt="" class="home-img">
                     </div>
                 </div>
             </div>
